--- a/app/slides/index.html
+++ b/app/slides/index.html
@@ -7,8 +7,8 @@
     <body>
         <ul>
             <li>
-                <a href="./link_para_palstestra>Descrição da sua palestra</a>
+                <a href="/slides/many_voices_one_mozilla/index.html">ApresentaÃ§Ã£o de boas vinda - Ulbra Torres 30/11/2013</a>
             </li>
-        </ul>        
+        </ul>
     </body>
 </html>
