--- a/app/slides/index.html
+++ b/app/slides/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul>
             <li>
-                <a href="/slides/many_voices_one_mozilla/index.html">Apresentação de boas vinda - Ulbra Torres 30/11/2013</a>
+                <a href="/slides/many_voices_one_mozilla/index.html">Muitas vozes, uma Mozilla</a>
             </li>
         </ul>
     </body>
