Adição de icones

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,6 +13,16 @@
         <script src="./js/app.js"></script>
         <script src="./js/controllers.js"></script>
         <script src="./js/services.js"></script>
+        
+        <link rel="apple-touch-icon" href="/images/public/icon-60.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/images/public/icon-76.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/images/public/icon-120.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/images/public/icon-152.png">
+        <link rel="apple-touch-startup-image" href="/images/public/startup.png"/>
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Speaker"/>
+       <meta name="viewport" content="width=device-width, initial-scale=1">
 
     </head>
     <body ng-app="public">
