--- a/app/speaker/basic/index.html
+++ b/app/speaker/basic/index.html
@@ -14,6 +14,16 @@
         <script type="text/javascript" src="./js/app.js"></script>
         <script type="text/javascript" src="./js/controllers.js"></script>
         <script type="text/javascript" src="./js/services.js"></script>
+        
+        <link rel="apple-touch-icon" href="/images/speaker/icon-60.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/images/speaker/icon-76.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/images/speaker/icon-120.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/images/speaker/icon-152.png">
+        <link rel="apple-touch-startup-image" href="/images/speaker/startup.png"/>
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Speaker"/>
+       <meta name="viewport" content="width=device-width, initial-scale=1">
 
     </head>
     <body ng-app="speaker" ng-controller="ControlCtrl">
