fix - Direcionamento para slide correto

--- a/app/speaker/index.html
+++ b/app/speaker/index.html
@@ -3,14 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Speaker</title>
+        <script>
+            function openPage(type)
+            {
+                window.location = window.location.href.concat(type).concat('/index.html');
+            }
+        </script>
     </head>
     <body>
         <ul>
             <li>
-                <a href="./basic/index.html">Basic</a>
+                <a href="#" onclick="openPage('/basic');">Basic</a>
             </li>
             <li>
-                <a href="./full/index.html">Full</a>
+                <a href="#" onclick="openPage('/full');">Full</a>
             </li>
         </ul>        
     </body>
